apps/base/lucerna/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lucerna
spec:
  type: ClusterIP
  selector:
    app: lucerna
  ports:
    - port: 80
      targetPort: http
