apps/base/lucerna/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lucerna
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Public
    gethomepage.dev/name: Lucerna
    gethomepage.dev/description: Scripture Widgets for iOS
    gethomepage.dev/href: https://lucerna.harville.dev
    gethomepage.dev/siteMonitor: https://lucerna.harville.dev
spec:
  ingressClassName: traefik-public
  tls:
    - hosts: [lucerna.harville.dev]
  rules:
    - host: lucerna.harville.dev
      http:
        paths:
          - path: /privacy-policy
            pathType: Prefix
            backend:
              service:
                name: lucerna
                port:
                  number: 80
          - path: /support
            pathType: Prefix
            backend:
              service:
                name: lucerna
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lucerna
                port:
                  number: 80
